Revision history for Music-Intervals

{{$NEXT}}

0.1000 2026-01-18 14:10:34
    - Add the cope() and tenney() methods.

0.0905 2022-04-03 06:18:07
    - Fix documentation.

0.0904 2022-02-12 13:33:54
    - Add more (mostly harmonic) ratios!

0.0903 2022-02-12 09:05:56
    - Rename eg/pythagorean to "eg/analyze", and enhance it some more.

0.0902 2022-02-11 14:29:11
    - Enhance the eg/pythagorean program.

0.0901 2022-02-09 06:37:15
    - Add the eg/pythagorean program.
    - Improve documentation.

0.0900 2022-02-07 09:40:41
    - Add the by_description method.

0.0804 2022-02-07 07:32:27
    - Fix the notes attribute default.

0.0803 2022-02-06 04:50:06
    - Copy the just-intonation scala file to eg/.
    - Improve documentation.

0.0802 2022-02-05 07:52:01
    - Fix the eg/* programs a bit more.

0.0801 2022-02-05 07:03:16
    - Fix the eg/* programs.
    - Improve documentation.

0.0800 2022-02-04 19:46:46
    * This is a fundamental change to the output.
    - Remove the chord aspect and just focus on intervals.
    - Improve documentation.
    - Improve the eg/intervals program.
    - Add the eg/intervals-numeric program.

0.0711 2022-02-01 12:47:49
    - Add the eg/benchmark program, just because I was curious.
    - Remove the method names from the keys.

0.0710 2022-02-01 12:08:22
    - Improve documentation.

0.0709 2022-02-01 12:02:03
    - And update the *::Numeric side too!

0.0708 2022-02-01 11:47:34
    - Allow single notes too!

0.0707 2022-01-30 17:28:08
    - Make the ratios attribute not-private!
    - Add the eg/scala example program.

0.0706 2022-01-30 16:48:46
    Modernize the Numeric module, too.

0.0705 2022-01-28 20:12:40
    - Improve documentation.
    - Add a test!
    - Get frequency with a handy module, instead of ugly math!

0.0704 2022-01-28 19:43:12
    - Hide attributes that shouldn't be fooled-with anyway.

0.0703 2022-01-28 15:48:42
    - Improve documentation.

0.0702 2022-01-28 15:26:51
    - Improve documentation.
