@@ -1,6 +1,7 @@
 Revision history for Music-Intervals
 
 {{$NEXT}}
+    - Add Euler's Gradus suavitatis() method.
 
 0.1000 2026-01-18 14:10:34
     - Add the cope() and tenney() methods.
